[project]
name = "vox-real"
version = "0.1.12"
authors = [
  { name="Bob Ros", email="bobmeuchelm@gmail.com" },
]
license = "Apache-2.0"
description = "A real-time audio transcription tool/lib using Whisper."
readme = "readme_pypi.md"
requires-python = ">=3.8"
dependencies = [
    "pyaudio>=0.2.11",
    "openai-whisper>=20250625",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vox*"]

[project.urls]
Repository = "https://github.com/bob-ros2/vox"

[project.scripts]
vox = "vox.cli:main"
